# dss

./: .gitignore  Cargo.toml  Makefile  README.md  RESOURCES.md  TASKS_AND_BUGS.md
c/: a.sh  cd.c  pipe.c  shell.c  stage1_shell.c  test.c
docker/: Dockerfile  Dockerfile.test
src/: command.rs  engine.rs  errors.rs  main.rs  writer.rs
src/command/: lexer.rs  mod.rs  parser.rs  token.rs
src/command/snapshots/: dss__command__lexer__tests__cmd_lexing_of_logical_and-2.snap  dss__command__lexer__tests__cmd_lexing_of_logical_and.snap  dss__command__lexer__tests__cmd_lexing_of_logical_or-2.snap  dss__command__lexer__tests__cmd_lexing_of_logical_or.snap  dss__command__lexer__tests__cmd_lexing_of_negate_exit_status.snap  dss__command__lexer__tests__cmd_lexing_of_semicolon_logical_and-2.snap  dss__command__lexer__tests__cmd_lexing_of_semicolon_logical_or-2.snap  dss__command__lexer__tests__cmd_lexing_of_semicolon_logical_or.snap  dss__command__lexer__tests__cmd_lexing_of_semicolon_separator-2.snap  dss__command__lexer__tests__cmd_lexing_of_semicolon_separator.snap  dss__command__lexer__tests__cmd_lexing_with_multiple_separators.snap  dss__command__lexer__tests__cmd_parsing_of_negate_exit_status.snap  dss__command__lexer__tests__cmd_parsing_of_semicolon_logical_and.snap  dss__command__lexer__tests__cmd_parsing_of_semicolon_separator.snap  dss__command__lexer__tests__cmd_with_args_lexing.snap  dss__command__lexer__tests__lexing_of_backslash.snap  dss__command__lexer__tests__lexing_of_bg_process_with_ampersand.snap  (+45 more)
src/frontend/: mod.rs  prompt.rs  writer.rs
