[package]
name = "dss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
colored = "2.0.0"
libc = "0.2.139"
nix = "0.26.1"
signal-hook = "0.3.14"
thiserror = "1.0.38"

[dev-dependencies]
insta = { version = "1.26.0", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
